implemented user management and expiry of psns